Major refactor to replace File with Path